--- a/index.html
+++ b/index.html
@@ -1,50 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Single Price Grid Component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- link for fonts by googlefonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  Join our community
 
-  30-day, hassle-free money back guarantee
+<div class="main-container">
 
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
 
-  Monthly Subscription
+  <div class="wrapper-container">
 
-  &dollar;29 per month
 
-  Full access for less than &dollar;1 a day
+    <!-- GRID LAYOUT -->
+    <div class="grid-container">
+      <div class="grid-head">
+        <h1>Join our community</h1>
 
-  Sign Up
+        <h3>30-day, hassle-free money back guarantee</h3>
 
-  Why Us
+        <h5>Gain access to our full library of tutorials along with expert code reviews. <br>
+        Perfect for any developers who are serious about honing their skills.</h5>
 
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
+      </div>
+      <div class="grid-main">
+        <h4>Monthly Subscription</h4>
+
+        <h4><span class="plan-price">&dollar;29</span> per month</h4>
+
+        <p>Full access for less than &dollar;1 a day</p>
+
+        <button type="button" name="button">Sign Up</button>
+
+      </div>
+      <div class="grid-right">
+        <h4>Why Us</h4>
+
+        <p>
+          Tutorials by industry experts <br>
+          Peer &amp; expert code review <br>
+          Coding exercises <br>
+          Access to our GitHub repos <br>
+          Community forum <br>
+          Flashcard decks <br>
+          New videos every week <br>
+        </p>
+      </div>
+
+    </div>
+
+  </div>
+
   <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+    <div class="footer-container">
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://markoscapin.github.io/mysite/">Marco Scapin</a>.
+      </p>
+    </div>
+
   </footer>
+
+  </div>
 </body>
+
 </html>
