--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="footer-container">
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="https://markoscapin.github.io/mysite/">Marco Scapin</a>.
+        Coded by <a href="#">Marco Scapin</a>.
       </p>
     </div>
 
